# rolldown-compression

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  biome.json  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json  tsdown.config.ts  vitest.config.ts
.changeset/: blue-steaks-listen.md  config.json  cool-geckos-call.md  crisp-dingos-divide.md  declare-platform-optional-deps.md  fancy-deer-tell.md  fast-parrots-leave.md  giant-pets-dig.md  heavy-llamas-brake.md  initial-release.md  lazy-brotli-worker-pool.md  loose-garlics-wonder.md  metal-zoos-enter.md  new-boats-rhyme.md  nine-kings-clap.md  pink-actors-call.md  purple-lions-arrive.md  silver-wombats-send.md  soft-pandas-stream.md  spicy-beers-matter.md  strong-balloons-type.md  tidy-toolchains-optimize.md  two-donuts-relax.md  update-dependencies.md  warm-pillows-tan.md  wet-ravens-sin.md  witty-bears-burn.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  version.yml
__tests__/integration/: build.test.ts  event-loop.test.ts  large-file.test.ts
__tests__/unit/: chunking.test.ts  options.test.ts  plugin.test.ts  stream.test.ts
benchmark/: fixtures.mjs  index.mjs  pgo-compare.mjs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
scripts/: sync-optional-deps.mjs  wasm-smoke.mjs
src/: compress.rs  lib.rs  scheduler.rs
ts/: binding.ts  index.ts  options.ts  plugin.ts
(+13 files in other folders)
