[package]
name = "rolldown-compression"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
brotli = "8"
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
napi = { version = "3", default-features = false, features = ["napi10"] }
napi-derive = "3"
rayon = "1.12"
zstd = "0.13"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
mimalloc = "0.1"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "0.1", features = ["local_dynamic_tls"] }

[build-dependencies]
napi-build = "2"

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
